
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
    
    
    
    <item
        android:id="@+id/item_upload"
        android:icon="@drawable/zeebraa"
        android:showAsAction="always"
        android:title="@string/menu_upload"
        android:titleCondensed="@string/menu_upload">
    </item>
    
    <item android:id="@+id/item_share"
          android:icon="@android:drawable/ic_menu_share"          
          android:showAsAction="ifRoom"
          android:title="@string/menu_share"
          android:titleCondensed="@string/menu_share"
          android:actionProviderClass="android.widget.ShareActionProvider">
    </item>
    
    <item
        android:id="@+id/item_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="always"
        android:title="@string/menu_edit"
        android:titleCondensed="@string/menu_edit">
    </item>
    <item
        android:id="@+id/item_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="always"
        android:title="@string/menu_delete"
        android:titleCondensed="@string/menu_delete">
    </item>
 
</menu>