<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/zeebraa_sticker"
    	android:orientation="vertical">
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp">

        <Button            
            android:id="@+id/button_zeebraa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_activity_web"
            android:textColor="@color/white_text_color"
            android:background="@drawable/button_shape"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="2dp"/>

        <Button
            android:id="@+id/button_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_activity_radio" 
            android:textColor="@color/white_text_color"
            android:background="@drawable/button_shape"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"/>

        <Button
            android:id="@+id/button_recorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_activity_recorder" 
            android:textColor="@color/white_text_color"
            android:background="@drawable/button_shape"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="7dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_1row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="35dp"
        android:text="@string/welcome_first_row"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white_text_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_2row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_1row"
        android:layout_below="@+id/textView_1row"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_second_row"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white_text_color" 
        android:textSize="22sp" />
    
    </RelativeLayout>
 

